feat:PrioriteReste